kubernetes/apps/flux-system/flux-instance/app/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: flux-controllers
spec:
  description: "Network policy for Flux controllers"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/part-of: flux
  ingress:
    # Allow same namespace traffic
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: flux-system
    # Allow webhook from kube-apiserver
    - fromEntities:
        - kube-apiserver
    # Allow prometheus scraping
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: observability
  egress:
    # Allow same namespace traffic
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: flux-system
    # Allow kube-apiserver access
    - toEntities:
        - kube-apiserver
    # Allow git/OCI registry access
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "22"
              protocol: TCP
    # Allow DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
